--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="src" path="daisyworks-bluetooth-library_src"/>
+	<classpathentry kind="src" path="daisy-android-common_src"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
