--- a/default.properties
+++ b/default.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:7
-android.library.reference.1=../daisyworks-android-common
+android.library.reference.1=../daisy-android-common
