--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.daisyworks.btcontrol"
-      android:versionName="1.0.3" android:versionCode="4">
+      android:versionCode="5" android:versionName="1.1.0">
     <uses-sdk android:minSdkVersion="7" />
     
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
