--- a/project.properties
+++ b/project.properties
@@ -7,6 +7,7 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
-android.library.reference.1=../daisy-android-common
 # Project target.
 target=Google Inc.:Google APIs:7
+android.library=false
+android.library.reference.1=../daisy-android-common
