--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,15 +8,15 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name="com.daisyworks.android.bluetooth.BluetoothApplication">
-        <activity android:name=".BluetoothControlActivity"
+        <activity android:name=".DaisyOnOffActivity"
                   android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="BluetoothControlPreferenceActivity"></activity>
         <activity android:name="ConfigurationActivity"></activity>
+        <activity android:name="ConfigureBluetoothButtonActivity"></activity>
         <activity android:name="com.daisyworks.android.HelpActivity"></activity>
 
     </application>
