--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,8 @@
     
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN"></uses-permission>
-
+    <uses-permission android:name="android.permission.INTERNET" />
+    
     <application android:icon="@drawable/icon" 
                  android:label="@string/title.main" 
                  android:name="com.daisyworks.android.bluetooth.BluetoothApplication">
