--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.daisyworks.btcontrol"
-      android:versionCode="7" android:versionName="1.2">
+      package="com.daisyworks.onoff"
+      android:versionCode="1" android:versionName="0.1">
     <uses-sdk android:minSdkVersion="7" />
     
     <uses-permission android:name="android.permission.BLUETOOTH"></uses-permission>
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     
     <application android:icon="@drawable/icon" 
-                 android:label="@string/title.main" 
+                 android:label="@string/title.app" 
                  android:name="com.daisyworks.android.bluetooth.BluetoothApplication">
                  
         <activity android:name=".DaisyOnOffActivity"
