--- a/project.properties
+++ b/project.properties
@@ -8,6 +8,6 @@
 # project structure.
 
 # Project target.
-target=Google Inc.:Google APIs:7
+target=android-7
 android.library=false
 android.library.reference.1=../daisy-android-common
